--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,6 @@
-<div class="home-content center-stage" [ngClass]="{'hide': !isHeaderFix}">
+<div class="home-content center-stage" [ngClass]="{'hide': !(headerState.state === HEADER_STATE.Fixed)}">
   <div class="overview-wrapper">
-    <div class="overview art-overview below-view" appJsOnscroll [viewportCheck]=true [restoreInitial]=restoreInitial [padding]=200
-      (enteredViewport)="updateSlideCount($event, 1)">
+    <div class="overview art-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 (enteredViewport)="updateSlideCount($event, 1)">
       <div class="dp overview-dp">
         <h2>Art</h2>
         <div class="alpha-initial-bg">A</div>
@@ -18,7 +17,7 @@
     </div>
   </div>
   <div class="overview-wrapper">
-    <div class="overview projects-overview below-view" appJsOnscroll [viewportCheck]=true [restoreInitial]=restoreInitial [padding]=200
+    <div class="overview projects-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200
       (enteredViewport)="updateSlideCount($event, 2)">
       <div class="dp overview-dp">
         <h2>Projects</h2>
@@ -36,8 +35,7 @@
     </div>
   </div>
   <div class="overview-wrapper">
-    <div class="overview skills-overview below-view" appJsOnscroll [viewportCheck]=true [restoreInitial]=restoreInitial [padding]=200
-      (enteredViewport)="updateSlideCount($event, 3)">
+    <div class="overview skills-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 (enteredViewport)="updateSlideCount($event, 3)">
       <div class="dp overview-dp">
         <h2>Blog</h2>
         <div class="alpha-initial-bg">B</div>
@@ -54,8 +52,7 @@
     </div>
   </div>
   <div class="overview-wrapper">
-    <div class="overview about-overview below-view" appJsOnscroll [viewportCheck]=true [restoreInitial]=restoreInitial [padding]=200
-      (enteredViewport)="updateSlideCount($event, 4)">
+    <div class="overview about-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 (enteredViewport)="updateSlideCount($event, 4)">
       <div class="dp overview-dp">
         <h2>About</h2>
         <div class="alpha-initial-bg">A</div>
@@ -72,7 +69,7 @@
     </div>
   </div>
   <div class="overview-wrapper">
-    <div class="overview contact-overview below-view" appJsOnscroll [viewportCheck]=true [restoreInitial]=restoreInitial [padding]=200
+    <div class="overview contact-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200
       (enteredViewport)="updateSlideCount($event, 5)" [checkAboveView]=false>
       <div class="dp overview-dp">
         <h2>Contact</h2>
