--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <section class="background">
   <me-card></me-card>
-  <div class="main-content" [ngClass]="{'fixed-header': isHeaderFix}">
+  <div class="main-content">
     <router-outlet></router-outlet>
     <footer class="main-footer">
     </footer>
