--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,8 +17,7 @@
     </div>
   </div>
   <div class="overview-wrapper">
-    <div class="overview projects-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200
-      (enteredViewport)="updateSlideCount($event, 2)">
+    <div class="overview projects-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 >
       <div class="dp overview-dp">
         <h2>Projects</h2>
         <div class="alpha-initial-bg">P</div>
@@ -35,7 +34,7 @@
     </div>
   </div>
   <div class="overview-wrapper">
-    <div class="overview skills-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 (enteredViewport)="updateSlideCount($event, 3)">
+    <div class="overview skills-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 >
       <div class="dp overview-dp">
         <h2>Blog</h2>
         <div class="alpha-initial-bg">B</div>
@@ -52,7 +51,7 @@
     </div>
   </div>
   <div class="overview-wrapper">
-    <div class="overview about-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 (enteredViewport)="updateSlideCount($event, 4)">
+    <div class="overview about-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 >
       <div class="dp overview-dp">
         <h2>About</h2>
         <div class="alpha-initial-bg">A</div>
@@ -69,8 +68,7 @@
     </div>
   </div>
   <div class="overview-wrapper">
-    <div class="overview contact-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200
-      (enteredViewport)="updateSlideCount($event, 5)" [checkAboveView]=false>
+    <div class="overview contact-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 [checkAboveView]=false>
       <div class="dp overview-dp">
         <h2>Contact</h2>
         <div class="alpha-initial-bg">C</div>
