--- a/src/styles.css
+++ b/src/styles.css
@@ -52,17 +52,21 @@ body::-webkit-scrollbar-thumb {
     min-height: 400px;
 }
 
+input {
+    outline: none;
+}
+
 .loading-icon {
     position: absolute;
     font-size: 3em;
-    color: #454545;
+    color: #212121;
     margin: auto;
     width: 1em;
     height: 1em;
     left: 0;
     right: 0;
     border: 2px solid #ccc;
-    border-top: 2px solid #454545;
+    border-top: 2px solid #212121;
     border-radius: 50%;
     opacity: 0;
 }
