Fixes and Optimizations

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="home-content center-stage" [ngClass]="{'hide': !(headerState.state === HEADER_STATE.Fixed)}">
   <div class="overview-wrapper">
-    <div class="overview art-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 (enteredViewport)="updateSlideCount($event, 1)">
+    <div class="overview art-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200>
       <div class="dp overview-dp">
         <h2>Art</h2>
         <div class="alpha-initial-bg">A</div>
