--- a/src/app/js-carousel/js-carousel.component.html
+++ b/src/app/js-carousel/js-carousel.component.html
@@ -1,15 +1,14 @@
 <div class="carousel-wrapper">
   <div class="loading-icon" [ngClass]="{'animate': isLoading}">
-    </div>
+  </div>
   <ul class="carousel-list" [hidden]="isLoading">
-    <li id="{{item.id}}" class="carousel-item" 
-        *ngFor="let item of slideItems; let first = first" 
+    <li id="{{item.id}}" class="carousel-item" *ngFor="let item of slideItems; let first = first" 
         [ngClass]="{'active': item.active,
                     'left': item.left,
                     'right': item.right,
                     'next': item.next,
                     'prev': item.prev}">
-        <img #carouselItem title="{{item.title}}" alt="{{item.alt}}" [src]="item.url" (load)="updateProgress($event)" />
+      <img title="{{item.title}}" alt="{{item.alt}}" [src]="item.url" (load)="updateProgress($event)" />
     </li>
   </ul>
   <div class="arrow-btn left" (click)="showPrev()">
