--- a/src/app/art/art.component.html
+++ b/src/app/art/art.component.html
@@ -1,7 +1,10 @@
 <div class="content art-content center-stage">
   <h1>Art</h1>
   <div class="content-wrapper view-check clearfix below-view" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
-    <h2 class="main">A collection of my sketches and paintings</h2>
+    <div class="main">
+      <h2>A collection of my sketches and paintings</h2>
+      <i class="icon-android-color-palette"></i>
+    </div>
     <div class="feature-content">
     </div>
   </div>
