--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,6 +1,9 @@
 <div class="content blog-content center-stage">
   <h1>Blog</h1>
   <div class="content-wrapper view-check below-view" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
-    <h2 class="main">My blogs will appear here</h2>
+    <div class="main">
+      <h2>My blogs will appear here</h2>
+      <i class="icon-ios-chatboxes"></i>
+    </div>
   </div>
 </div>
