--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,6 +1,9 @@
 <div class="content projects-content center-stage">
   <h1>Projects</h1>
   <div class="content-wrapper view-check below-view" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
-    <h2 class="main">My tech projects will come up here</h2>
+    <div class="main">
+      <h2>My tech projects will come up here</h2>
+      <i class="icon-social-github"></i>
+    </div>
   </div>
 </div>
