--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,21 +1,30 @@
 <div class="content about-content center-stage">
   <h1>About</h1>
   <div class="content-wrapper view-check clearfix below-view" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
-    <h2 class="main">Hi! I am Jayabratha Saha, friends call me Jay.</h2>
+    <div class="main">
+      <h2>Hi! I am Jayabratha Saha, friends call me Jay.</h2>
+      <i class="icon-android-compass"></i>
+    </div>
     <div class="feature-content">
       <p>
-        I am a frontend developer with full stack experience and also an artist and designer by passion. As a developer I mostly
-        work on web technologies currently focusing on MEAN(MongoDB, Express, Angular, NodeJS) technology stack. I love creating
-        my own designs and open source components and always keep me involved in proof of concepts and projects on latest
+        I am a frontend developer with full stack experience and also an artist and designer by passion. As a developer
+        I mostly
+        work on web technologies currently focusing on MEAN(MongoDB, Express, Angular, NodeJS) technology stack. I love
+        creating
+        my own designs and open source components and always keep me involved in proof of concepts and projects on
+        latest
         technologies.
-        <br/>
-        <br/> Designing has always been with me even before I started loving technology. I use to design products as well along
-        with portraits and paintings. Being a frontend developer, nowadays I am mostly into interface design that are delightful
+        <br />
+        <br /> Designing has always been with me even before I started loving technology. I use to design products as
+        well along
+        with portraits and paintings. Being a frontend developer, nowadays I am mostly into interface design that are
+        delightful
         and accessible.
       </p>
     </div>
   </div>
-  <section class="my-tiles view-check below-view" appJsOnscroll [viewportCheck]=true [padding]=100 [checkAboveView]=false (enteredViewport)="animateSkills()">
+  <section class="my-tiles view-check below-view" appJsOnscroll [viewportCheck]=true [padding]=100 [checkAboveView]=false
+    (enteredViewport)="animateSkills()">
     <div class="tiles-wrapper">
       <h2>Tech Skills</h2>
       <div class="tiles-container">
@@ -53,7 +62,8 @@
         </ul>
       </div>
       <p class="sub-desc below-view" appJsOnscroll [viewportCheck]=true [padding]=500 [checkAboveView]=false>
-        I am currently working on MEAN stack technologies specializing on front-end including TypeScript, Angular along with base
+        I am currently working on MEAN stack technologies specializing on front-end including TypeScript, Angular along
+        with base
         web technologies. I have also experience in working with Ionic and Firebase.
       </p>
     </div>
@@ -74,8 +84,10 @@
                   <div class="time">Oct, 2016 - present</div>
                 </div>
                 <p>
-                  I worked as Senior Interactive Developer for Wells Fargo Bank. I used this opportunity to design and develop apps that qualify
-                  the web accessibilty specifications and fulfill the user experience guidelines. Here I worked on custom
+                  I worked as Senior Interactive Developer for Wells Fargo Bank. I used this opportunity to design and
+                  develop apps that qualify
+                  the web accessibilty specifications and fulfill the user experience guidelines. Here I worked on
+                  custom
                   web widgets based on YUI and Angular SPAs.
                 </p>
               </div>
@@ -92,9 +104,12 @@
                   <div class="time">March, 2012 - Sep, 2016</div>
                 </div>
                 <p>
-                  I started my carreer with TCS as a Systems Engineer. During my first 2 years I worked as Java Developer but worked on multiple
-                  technologies inclusing PHP, shell scripting, frontend stuff and lot more ebing on a support and enhancement
-                  project with DexMedia. Due to interest in design and frontend stuff I choose to move to a more of a frontend
+                  I started my carreer with TCS as a Systems Engineer. During my first 2 years I worked as Java
+                  Developer but worked on multiple
+                  technologies inclusing PHP, shell scripting, frontend stuff and lot more ebing on a support and
+                  enhancement
+                  project with DexMedia. Due to interest in design and frontend stuff I choose to move to a more of a
+                  frontend
                   role and worked as a IT Analyst for Pearson where I worked on mutiple Angular and OOJS projects.
                 </p>
               </div>
