--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,10 @@
 <div class="content contact-content center-stage">
   <h1>Contact</h1>
   <div class="content-wrapper view-check clearfix below-view" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
-    <h2 class="main">Send me an email here</h2>
+    <div class="main">
+      <h2>Send me an email here</h2>
+      <i class="icon-paper-airplane"></i>
+    </div>
     <div class="feature-content">
       <form class="contact-form container" [ngClass]="{'show-error': showError}" (ngSubmit)="onSubmit(contactForm)"
         #contactForm="ngForm">
