--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -68,12 +68,12 @@
       </p>
     </div>
   </section>
-  <section class="my-work-experience" appJsOnscroll [viewportCheck]=true [padding]=100 [checkAboveView]=false>
+  <section class="my-work-experience">
     <div class="experience-container">
       <h2>Work Experience</h2>
       <div class="exp-container">
         <ul>
-          <li>
+          <li appJsOnscroll [viewportCheck]=true [padding]=100 [checkAboveView]=false>
             <div #expItem class="exp-wrapper clearfix">
               <div class="logo-wrapper">
                 <img src="assets/sgm-logo.png" />
@@ -93,7 +93,7 @@
               </div>
             </div>
           </li>
-          <li>
+          <li appJsOnscroll [viewportCheck]=true [padding]=100 [checkAboveView]=false>
             <div #expItem class="exp-wrapper clearfix">
               <div class="logo-wrapper">
                 <img src="assets/tcs-logo.png" />
